# whitenoise

./: .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  Dockerfile.linux_build  LICENSE  README.md  TODO.md  biome.json  bun.lockb  docker-compose.yml  linux_build.sh  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: android_build.yml  build.yml  build_android.yml  build_ios.yml  build_linux.yml  build_macos.yml  ci.yml  ios_build.yml  release.yml  rust.yml  test.yml
.goose/memory/: development.txt
dev/: blossom-server-ts-config.yml  nostr-rs-relay-config.toml  strfry.conf
src/: App.svelte  app.css  app.html  app.pcss  index.html  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/db_migrations/: 0001_initial.sql  0002_add_relay_meta_to_relays.sql
src-tauri/icons/: icon.icns
src-tauri/src/: account_manager.rs  accounts.rs  app_settings.rs  database.rs  error.rs  group_manager.rs  groups.rs  identities.rs  image_cache.rs  invites.rs  key_packages.rs  lib.rs  main.rs  messages.rs  nostr.rs  nostr_client.rs  payments.rs  relays.rs  secrets_store.rs  types.rs  utils.rs  whitenoise.rs
src-tauri/src/commands/: accounts.rs  groups.rs  invites.rs  key_packages.rs  messages.rs  mod.rs  nostr.rs  payments.rs
src-tauri/src/commands/accounts/: create_identity.rs  get_accounts.rs  has_nostr_wallet_connect_uri.rs  login.rs  logout.rs  mod.rs  remove_nostr_wallet_connect_uri.rs  set_active_account.rs  set_nostr_wallet_connect_uri.rs  update_account_onboarding.rs
src-tauri/src/commands/groups/: create_group.rs  delete_message.rs  get_group.rs  get_group_admins.rs  get_group_and_messages.rs  get_group_members.rs  get_groups.rs  mod.rs  rotate_key_in_group.rs  send_mls_message.rs
src-tauri/src/commands/invites/: accept_invite.rs  decline_invite.rs  get_invite.rs  get_invites.rs  mod.rs
src-tauri/src/commands/key_packages/: delete_all_key_packages.rs  mod.rs  publish_new_key_package.rs  valid_key_package_exists_for_user.rs
src-tauri/src/commands/messages/: mod.rs
src-tauri/src/commands/nostr/: decrypt_content.rs  encrypt_content.rs  export_nsec.rs  fetch_contacts_with_metadata.rs  fetch_enriched_contact.rs  fetch_enriched_contacts.rs  fetch_relays.rs  generate_nip98_auth_token.rs  init_nostr_for_current_user.rs  invite_to_white_noise.rs  mod.rs  publish_metadata.rs  publish_relay_list.rs  query_contacts_with_metadata.rs  query_enriched_contact.rs  query_enriched_contacts.rs  search_for_enriched_contacts.rs
src-tauri/src/commands/payments/: mod.rs  pay_invoice.rs
src-tauri/src/nostr_manager/: blossom.rs  event_processor.rs  fetch.rs  media.rs  mod.rs  query.rs  search.rs  subscriptions.rs  sync.rs
src-tauri/src/nostr_mls/: event_processor.rs  groups.rs  invites.rs  key_packages.rs  mod.rs  nostr_group_data.rs  welcome_messages.rs
src/components/: Avatar.svelte  ChatHeader.svelte  ChatMessage.svelte  ChatTranscript.svelte  ChatsMainPanel.svelte  Contact.svelte  ContactPanel.svelte  ContactsMainPanel.svelte  ContactsSidebar.svelte  GroupAvatar.svelte  GroupListItem.svelte  InviteListItem.svelte  InviteSubheader.svelte  LegacyChatListItem.svelte  Loader.svelte  MainPanel.svelte  Menu.svelte  Name.svelte  ProfileCard.svelte  RespondPanel.svelte  Sidebar.svelte  SidebarChatListItem.svelte  SidebarContent.svelte  SidebarHeader.svelte  SidebarModal.svelte  Whitenoise.svelte
src/components/mobile/: TabBar.svelte
src/css/: app.css  framework7-custom.less  framework7-icons.css
src/js/: app.ts  framework7-custom.js  routes.ts
src/lib/components/: Alert.svelte  Avatar.svelte  ContactDetail.svelte  ContactsList.svelte  GroupAvatar.svelte  GroupListItem.svelte  Header.svelte  HeaderToolbar.svelte  InviteListItem.svelte  Loader.svelte  MessageBar.svelte  Modal.svelte  Name.svelte  PrivateMessageListItem.svelte  RepliedTo.svelte  SettingsHeader.svelte  Sidebar.svelte  Tabbar.svelte  Toast.svelte  Toaster.svelte
src/lib/components/Modals/: Modal.svelte  NewAccountModal.svelte  RelayListManager.svelte
src/lib/components/Onboarding/: OnboardingNumbers.svelte  PostOnboard.svelte  PreOnboard.svelte  PublishKeyPackage.svelte
src/lib/stores/: accounts.ts  chat.test.ts  chat.ts  ndk.ts  toast-state.svelte.ts
src/lib/stores/__tests__/: nostr-wallet-connect.test.ts
src/lib/types/: chat.ts  modal.ts  nostr.ts
src/lib/utils/: clipboard.ts  deletion.ts  lightning.ts  message.ts  nostr.ts  reaction.ts  tags.ts  time.ts
src/lib/utils/__tests__/: clipboard.test.ts  deletion.test.ts  lightning.test.ts  message.test.ts  reaction.test.ts  tags.test.ts
src/pages/: Calls.svelte  Chats.svelte  Contacts.svelte  CreateGroup.svelte  LegacyChat.svelte  LegacyChatInfo.svelte  Login.svelte  Messages.svelte  MlsGroup.svelte  MlsGroupInfo.svelte  MlsGroupInvite.svelte  Settings.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/calls/: +page.svelte
src/routes/(app)/chats/: +page.svelte
src/routes/login/: +page.svelte
src/routes/splashscreen/: +page.svelte
src/stores/: accounts.ts  identities.ts  legacyChats.svelte.ts  ndk.ts
src/types/: mls.ts  nostr.ts
src/utils/: group.ts  nostr.ts  time.ts
(+33 files in other folders)
