[package]
name = "whitenoise"
version = "0.1.0"
description = "A secure messenger built on MLS and Nostr"
authors = ["White Noise Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whitenoise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = "0.3.0"
tokio = { version = "1.40.0", features = ["full"] }
nostr-sdk = { version = "0.36", features = [
    "lmdb",
    "nip04",
    "nip44",
    "nip59",
    "nip104",
], path = "../../rust-nostr/crates/nostr-sdk" }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
keyring = { version = "3.2.0", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
uuid = { version = "1.3.0", features = ["v4"] }
base64 = "0.22"
openmls-nostr = { version = "0.1.0", path = "../../openmls-nostr" }

[dev-dependencies]
tempfile = "3"
