[package]
name = "whitenoise"
version = "0.1.0"
description = "A secure messenger built on MLS and Nostr"
authors = ["White Noise Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whitenoise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
tokio = { version = "1.40.0", features = ["full"] }
nostr-sdk = { version = "0.37", features = [
    "lmdb",
    "nip04",
    "nip44",
    "nip59",
], git="https://github.com/rust-nostr/nostr", rev="096e7b2e2e3f8fc8e36283f99a4d24d2cd34b1e1"}
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3.2.0", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
uuid = { version = "1.3.0", features = ["v4"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "migrate", "macros", "chrono", "derive", "json" ] }
base64 = "0.22"
nostr-openmls = { version = "0.1.0", git="https://github.com/erskingardner/nostr-openmls", branch="master" }
tauri-plugin-clipboard-manager = "2.2.1"

[dev-dependencies]
tempfile = "3"
